--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "repository": {
   },
   "dependencies": {
+    "coffee-script-brunch": ">= 1.8",
     "babel-brunch": "~6.0.0",
     "brunch": "~2.1.3",
     "clean-css-brunch": "~1.8.0",
